Fixes VO-1056, well titles labels wrapping to second line.

--- a/app/styles/common/_wells.scss
+++ b/app/styles/common/_wells.scss
@@ -7,6 +7,7 @@
 
   h4 {
     @extend %thin;
+    letter-spacing: 0.03em;
     margin-top: 0px;
     margin-bottom: 28px;
   }
